# 3D-Face-Recognition-Utils

./: .dockerignore  .gitignore  .gitmodules  Dockerfile  MANIFEST.in  README.md  ptc.py  ptc.sh  pytest.ini  recognition.py  recognition.sh  requirements.txt  tox.ini
com/appliedrec/verid3/serialization/common/: face_pb2.py  pointf_pb2.py
face_recognition_arcface/: .gitignore  MANIFEST.in  README.md  pyproject.toml
face_recognition_arcface/face_recognition_arcface/: __init__.py  alignment.py  face_recognition.py  input_processing.py  typing.py
face_recognition_arcface/face_recognition_arcface/models/: mbf.pt  mbf.py
face_recognition_arcface/tests/: conftest.py  test_face_recognition.py
face_recognition_fr3dnet/: .gitattributes  README.md  face_recognition.py  fr3dnet.py  pyproject.toml  typing.py
face_recognition_fr3dnet/face_recognition_fr3dnet/: __init__.py  face_recognition.py  input_processing.py  ptc2dae.py
face_recognition_fr3dnet/face_recognition_fr3dnet/models/: fr3dnet.pt
face_recognition_fr3dnet/scripts/: create_model_input.py  create_template.py  test_recognition.py
face_recognition_fr3dnet/tests/: conftest.py  test_input_processing.py
face_recognition_fr3dnet/tests/data/: masked_face.ply  masked_face_ptc.npy  nose_tip.json  point_cloud.ply
face_recognition_fr3dnet/tests/data/subjects/700000/: expr_000.ply  expr_001.ply  expr_003.ply
image3d_utils/: Dockerfile  __init__.py  decode_package.py  jxl_decode.cpp  masking.py  point_cloud.py  pyproject.toml  pytest.ini
image3d_utils/com/appliedrec/verid3/serialization/capture3d/: depth_map_pb2.py  image_3d_pb2.py  image_face_package_pb2.py
image3d_utils/image3d_utils/: point_cloud.py  typing.py
image3d_utils/scripts/: convert.py  npy_conversion.py
image3d_utils/tests/: test_decode_package.py
image3d_utils/tests/data/: face_ptc_masked_no_trim.npy  face_ptc_masked_no_trim.ply  face_ptc_masked_trim_80mm.npy  face_ptc_masked_trim_80mm.ply  face_ptc_unmasked_trim_80mm.npy  face_ptc_unmasked_trim_80mm.ply
scripts/: build.py  csv2npy.py  ply2npy.py  render_mesh.py
tests/: conftest.py  test_face_recognition.py  test_point_cloud.py
tests/data/: face_ptc_masked_no_trim.npy  face_ptc_masked_trim_80mm.ply  face_ptc_unmasked_trim_80mm.ply
tests/data/subjects/700000/: expr_002.ply  expr_004.ply  expr_005.ply
(+5 files in other folders)
