[build-system]
requires = ["setuptools", "wheel", "setuptools-scm", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "face_recognition_arcface"
dynamic = ["version"]
description = "Face recognition library using Arc Face model"
dependencies = [
    "numpy==1.24",
    "opencv-python",
    "scipy",
    "image3d_utils",
    "torch",
    "torchvision",
    "msgpack",
    "nptyping"
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["face_recognition_arcface"]
include-package-data = true

[tool.setuptools.package-data]
face_recognition_arcface = ["models/mbf.pt"]

[project.optional-dependencies]
dev = ["pytest", "pytest-testdox", "build"]