[build-system]
requires = ["setuptools", "wheel", "setuptools-scm", "pybind11"]
build-backend = "setuptools.build_meta"

[project]
name = "image3d_utils"
dynamic = ["version"]
description = "Utilities for working with 3D images captured by Ver-ID SDK"
dependencies = [
    "numpy==1.24",
    "opencv-python>=4.10.0.84,<5.0.0",
    "scipy>=1.13.1,<2.0.0",
    "protobuf<=3.20.0",
    "nptyping"
]
requires-python = ">=3.9"

[tool.setuptools]
packages = ["image3d_utils", "com.appliedrec.verid3.serialization.capture3d", "com.appliedrec.verid3.serialization.common"]

[tool.setuptools.package-data]
image3d_utils = ["*.so"]

[project.optional-dependencies]
dev = ["pybind11>=2.13.6,<3.0.0", "tox", "pytest", "pytest-testdox"]